début de la création d'une méthode qui prend chaque fichier et détermine chaque contributeur par tag.